# rss-reader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/html/: test.html
resources/rss/: World.xml  learnprogramming.rss  meduza.rss
source/: main.cpp  xml.cpp  xml.h
